--- a/LOVE/SOUL/PROFESSION/DATA SCIENCE/FIELD/PROJECTS/Food recommender system/requirements.txt
+++ b/LOVE/SOUL/PROFESSION/DATA SCIENCE/FIELD/PROJECTS/Food recommender system/requirements.txt
@@ -1,4 +1,3 @@
-streamlit>=1.20
-pandas>=1.5
-# Add any extra packages your app needs below
-# If you use other packages, list them here (e.g., numpy, matplotlib)
+streamlit==1.28.1
+pandas==2.0.3
+numpy==1.24.3
